# claude-memory-viewer

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml  release.yml
crates/session-core/: Cargo.toml
crates/session-core/src/: cli.rs  cli_config.rs  lib.rs  model_list.rs  quick_chat.rs  search.rs  state.rs  stats.rs
crates/session-core/src/models/: mod.rs  project.rs  session.rs  stats.rs
crates/session-core/src/parser/: jsonl.rs  mod.rs
crates/session-core/src/provider/: mod.rs
crates/session-web/: Cargo.toml
crates/session-web/src/: auth.rs  chat_ws.rs  config.rs  main.rs  static_files.rs  ws.rs
crates/session-web/src/routes/: messages.rs  mod.rs  projects.rs  search.rs  sessions.rs  stats.rs
scripts/: generate-icons.mjs  sync-version.mjs
src/: App.tsx  env.d.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: chat.rs  messages.rs  mod.rs  projects.rs  search.rs  sessions.rs  stats.rs  terminal.rs
src-tauri/src/models/: message.rs
src-tauri/src/parser/: jsonl.rs  path_encoder.rs
src-tauri/src/provider/: claude.rs  codex.rs
src-tauri/src/watcher/: fs_watcher.rs
src/components/chat/: ChatHeader.tsx  ChatInput.tsx  ChatPage.tsx  FloatingModelBadge.tsx  FolderSelector.tsx  ModelSelector.tsx  StreamingMessage.tsx
src/components/layout/: Sidebar.tsx  UpdateIndicator.tsx
src/components/message/: AssistantMessage.tsx  MessageThread.tsx  MessagesPage.tsx  TimelineDots.tsx  ToolOutputMessage.tsx  UserMessage.tsx
src/components/quick-chat/: QuickChatPage.tsx
src/components/session/: SessionsPage.tsx
src/hooks/: useActiveUserMessage.ts  useChatStream.ts  useFileWatcher.ts  useUpdateChecker.ts
src/services/: api.ts  tauriApi.ts  webApi.ts
src/stores/: appStore.ts  chatStore.ts  quickChatStore.ts  updateStore.ts
src/types/: chat.ts  index.ts
