[package]
name = "ai-session-viewer"
version = "1.1.0"
description = "A desktop app to browse Claude and Codex session histories"
authors = ["zuolan"]
edition = "2021"

[lib]
name = "ai_session_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
session-core = { path = "../crates/session-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "7"
chrono = { version = "0.4", features = ["serde"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
