[package]
name = "session-core"
version = "1.6.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
parking_lot = "0.12"
dirs = "6"
rayon = "1.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["rt"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
toml = "0.8"
